# grocery_store

./: env.simple  pyproject.toml
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_rename_prodictincart_productincart.py
config/: settings.py  urls.py
products/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_product.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: createSU.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
